[package]
name = "worker-helper"
version = "0.2.0"
authors = ["EAimTY <ea.imty@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "HTTP body helpers for the worker crate"
categories = ["api-bindings", "wasm", "web-programming"]
keywords = ["worker", "cloudflare", "http", "json", "yaml"]
readme = "README.md"
repository = "https://github.com/EAimTY/worker-helper"

[features]
default = []
json = ["dep:serde", "dep:serde_json", "dep:slice-of-bytes-reader"]
yaml = ["dep:serde", "dep:serde_yaml", "dep:slice-of-bytes-reader"]

[dev-dependencies]
worker-helper = { path = ".", features = ["json", "yaml"] }

[dependencies]
bytes = { version = "1.11.1", default-features = false, features = ["std"] }
futures = { version = "0.3.32", default-features = false }
http = { version = "1.4.0", default-features = false, features = ["std"] }
http-body = { version = "1.0.1", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"], optional = true }
serde_json = { version = "1.0.149", default-features = false, features = ["std"], optional = true }
serde_yaml = { version = "0.9.34", default-features = false, optional = true }
slice-of-bytes-reader = { version = "0.1.0", default-features = false, optional = true }
thiserror = { version = "2.0.18", default-features = false }
utf-8 = { version = "0.7.6", default-features = false }
worker = { version = "0.8.0", default-features = false, features = ["http"] }

[package.metadata.docs.rs]
all-features = true
